--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -89,14 +89,12 @@ body {
 
 /* Messages */
 .message {
-    max-width: 70%;
+    max-width: 75%;
     word-wrap: break-word;
     overflow-wrap: break-word;
+    margin: 5px 0; /* Reduce the margin to minimize spacing */
     padding: 10px 15px;
     border-radius: 10px;
-    margin-bottom: 10px;
-    display: inline-block;
-    clear: both;
 }
 
 .user-message {
@@ -130,7 +128,7 @@ body {
 .message h6 { font-size: 1em; }
 
 .message p {
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .message ul,
